# greg-sudoku-solver

./: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac
puzzles/: Makefile.am  Makefile.in  gsf_hardest.inp  mutantjelly.inp  quassim_hamza.inp  top870.inp
src/: Cell.cpp  Cell.hpp  DefineGroup.hpp  DefinePair.hpp  Index.hpp  Logging.cpp  Logging.hpp  Makefile.am  Makefile.in  Options.hpp  Sudoku.cpp  Sudoku.hpp  Techniques.cpp  Techniques.hpp  generator.cpp  solver.cpp
src/Techniques/: BasicFish.cpp  Bifurcate.cpp  Fish.cpp  HiddenSingle.cpp  IntersectionRemoval.cpp  LockedSet.cpp  LockedSet.hpp  NakedSingle.cpp  RemotePair.cpp  XyWing.cpp
src/boost/: Makefile.in
src/boost/algorithm/: Makefile.am  Makefile.in
src/techniques/: BasicFish.cpp  Bifurcate.cpp  Coloring.cpp  Coloring.hpp  Fish.cpp  HiddenSingle.cpp  IntersectionRemoval.cpp  LockedCandidates.cpp  LockedSet.cpp  LockedSet.hpp  Makefile.am  Makefile.in  MedusaColoring.cpp  RemotePair.cpp  SimpleColor.cpp  SimpleSudokuTechniqueSet.cpp  UniqueRectangle.cpp  XyWing.cpp  XyzWing.cpp
src/test/: 3d_medusa1  3d_medusa2  3d_medusa3  3d_medusa4  Makefile.am  Makefile.in  completed  finned_jellyfish1  finned_swordfish1  finned_xwing1  generator1  hidden_pair1  hidden_pair2  hidden_pair3  hidden_singles1  hidden_triple1  hidden_triple2  jellyfish1  line_box_intersection1  line_box_intersection2  line_box_intersection3  line_box_intersection4  line_box_intersection5  mixed_basic_fish1  mixed_basic_fish2  mixed_sets1  mixed_singles1  mixed_singles2  multi_color1  multi_color2  naked_pair1  naked_pair2  naked_pair3  naked_quad1  naked_quad2  naked_singles1  naked_singles2  naked_triple1  naked_triple2  no_solution1  (+27 more)
