noinst_LIBRARIES = libtechniques.a
AM_CPPFLAGS = -I${srcdir}/../
libtechniques_a_SOURCES = \
	Bifurcate.cpp NakedSingle.cpp HiddenSingle.cpp LockedCandidates.cpp \
	LockedSet.cpp Fish.cpp BasicFish.cpp XyWing.cpp XyzWing.cpp \
	UniqueRectangle.cpp RemotePair.cpp SimpleSudokuTechniqueSet.cpp \
	Coloring.cpp MedusaColoring.cpp \
	LockedSet.hpp Coloring.hpp
