dist_check_SCRIPTS = test_runner \
	completed naked_singles1 naked_singles2 hidden_singles1 mixed_singles1 \
	mixed_singles2 line_box_intersection1 line_box_intersection2 \
	line_box_intersection3 line_box_intersection4 line_box_intersection5 \
	naked_pair1 naked_pair2 naked_pair3 naked_triple1 naked_triple2 \
	naked_quad1 naked_quad2 hidden_pair1 hidden_pair2 hidden_pair3 \
	hidden_triple1 hidden_triple2 mixed_sets1 xwing1 xwing2 swordfish1 \
	swordfish2 jellyfish1 mixed_basic_fish1 mixed_basic_fish2 xywing1 xywing2 \
	xyzwing1 remote_pairs1 remote_pairs2 unique_rectangle1 unique_rectangle2 \
	non_unique1 non_unique2 non_unique3 non_unique4 no_solution1 no_solution2 \
	no_solution3 finned_xwing1 sashimi_xwing1 sashimi_xwing2 finned_swordfish1 \
	sashimi_swordfish1 finned_jellyfish1 generator1 simple_color1 \
	simple_color2 simple_color3 multi_color1 multi_color2 3d_medusa1 \
	3d_medusa2 \
	sue_de_coq1 sue_de_coq2 xy_chain1


TESTS = completed naked_singles1 hidden_singles1 naked_singles2 mixed_singles1 \
	mixed_singles2 line_box_intersection1 line_box_intersection2 \
	line_box_intersection3 line_box_intersection4 line_box_intersection5 \
	naked_pair1 naked_pair2 naked_pair3 naked_triple1 naked_triple2 \
	naked_quad1 naked_quad2 hidden_pair1 hidden_pair2 hidden_pair3 \
	hidden_triple1 hidden_triple2 mixed_sets1 xwing1 xwing2 swordfish1 \
	swordfish2 jellyfish1 mixed_basic_fish1 mixed_basic_fish2 xywing1 xywing2 \
	xyzwing1 remote_pairs1 remote_pairs2 unique_rectangle1 unique_rectangle2 \
	non_unique1 non_unique2 non_unique3 non_unique4 no_solution1 no_solution2 \
	no_solution3 finned_xwing1 sashimi_xwing1 sashimi_xwing2 finned_swordfish1 \
	sashimi_swordfish1 finned_jellyfish1 generator1 simple_color1 \
	simple_color2 simple_color3 multi_color1 multi_color2 3d_medusa1 \
	3d_medusa2
